updated some of the scss to fix errors regarding the cl ose modal symbol, spacing for photos, etc.

--- a/frontend/src/styles/PhotoDetailsModal.scss
+++ b/frontend/src/styles/PhotoDetailsModal.scss
@@ -1,6 +1,16 @@
+.photo-details-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  z-index: 999;
+}
+
+
 .photo-details-modal {
   background-color: white;
-  box-shadow: 0 0 0 50vmax rgba(0, 0, 0, 0.5);
   position: fixed;
   top: 50%;
   left: 50%;
@@ -28,8 +38,8 @@
   position: absolute;
   top: 12px;
   right: 12px;
-  background-color: white;
-  border: 2px solid #333;
+  background-color: #333;
+  border: 2px solid white;
   border-radius: 50%;
   width: 32px;
   height: 32px;
